--- a/styles.css
+++ b/styles.css
@@ -1,112 +1,141 @@
-* { 
-    box-sizing: border-box; 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-body, html { 
-    height: 100%; 
+body,
+html {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
-body { 
-    background-color: #000000; 
-    color: #ffffff; 
+body {
+    background-color: #000000;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-h1 { 
-    font-family: "Playfair Display"; 
-    font-size: 30px; 
-    padding: 10px 0px; 
-    margin: 0px; 
+h1 {
+    font-family: "Playfair Display";
+    font-size: 30px;
+    padding: 10px 0px;
+    margin: 0px;
 }
 
-.field-box { 
-    border: 2px solid #d0d0d0; 
-    float: left; 
+.field-box {
+    border: 2px solid #d0d0d0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.field { 
-    position: relative; 
-    width: 1024px; 
-    height: 640px; 
+.field {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
-.field .tile { 
-    position: absolute; 
-    width: 50px; 
-    height: 50px; 
-    background-size: 100%; 
-    background-image: url(images/tile-.png); 
-    z-index: 5; 
+.field .tile {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: 100%;
+    background-image: url(images/tile-.png);
+    z-index: 5;
 }
 
-.field .tileW { 
-    background-image: url(images/tile-W.png); 
+.field .tileW {
+    background-image: url(images/tile-W.png);
 }
 
-.field .tileE { 
-    background-image: url(images/tile-E.png); 
-    z-index: 10; 
+.field .tileE {
+    background-image: url(images/tile-E.png);
+    z-index: 10;
 }
 
-.field .tileP { 
-    background-image: url(images/tile-P.png); 
-    z-index: 10; 
+.field .tileP {
+    background-image: url(images/tile-P.png);
+    z-index: 10;
 }
 
-.field .tileHP { 
-    background-image: url(images/tile-HP.png); 
-    z-index: 9; 
+.field .tileHP {
+    background-image: url(images/tile-HP.png);
+    z-index: 9;
 }
 
-.field .tileSW { 
-    background-image: url(images/tile-SW.png); 
-    z-index: 9; 
+.field .tileSW {
+    background-image: url(images/tile-SW.png);
+    z-index: 9;
 }
 
-.field .tile .health { 
-    background-color: #ff0000; 
-    z-index: 11; 
-    position: absolute; 
-    left: 0px; 
-    top: 0px; 
-    height: 3px; 
+.field .tile .health {
+    background-color: #ff0000;
+    z-index: 11;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 3px;
 }
 
-.field .tileP .health { 
-    background-color: #00ff00; 
-    z-index: 11; 
-    position: absolute; 
-    left: 0px; 
-    top: 0px; 
-    height: 3px; 
+.field .tileP .health {
+    background-color: #00ff00;
+    z-index: 11;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 3px;
 }
 
-.inventory-box { 
-    border: 2px solid #d0d0d0; 
-    float: left; 
+.inventory-box {
+    border: 2px solid #d0d0d0;
+    float: left;
 }
 
-.inventory { 
-    position: relative; 
-    width: 800px; 
-    height: 32px; 
+.inventory {
+    position: relative;
+    width: 800px;
+    height: 32px;
 }
 
-.cl { 
-    clear: both; 
-    display: block; 
+.cl {
+    clear: both;
+    display: block;
 }
 
 /* Анимации для атак */
 @keyframes playerAttack {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.2); }
-    100% { transform: scale(1); }
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 @keyframes enemyAttack {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.2); }
-    100% { transform: scale(1); }
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .attacking {
@@ -119,11 +148,19 @@ h1 {
 
 /* Эффект при получении урона */
 @keyframes damage {
-    0% { filter: brightness(1); }
-    50% { filter: brightness(2); }
-    100% { filter: brightness(1); }
+    0% {
+        filter: brightness(1);
+    }
+
+    50% {
+        filter: brightness(2);
+    }
+
+    100% {
+        filter: brightness(1);
+    }
 }
 
 .damaged {
     animation: damage 0.3s ease-in-out;
-} 
+}
